# Umbrella

./: .gitmodules  CMakeLists.txt  CMakeSettings.txt  CONTRIBUTING.md  README.md
extlib/: makefile-default-paths-linux  makefile-default-paths-macos  makefile-default-paths-win  makefile-libBoost  makefile-libEigen  makefile-libGUROBI  makefile-libHiGHS  makefile-libNetCDF  makefile-libSCIP  makefile-libStOpt
